--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -39,8 +39,10 @@ DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
 | [2022-02-20] | takeout       |      -45 |
 | [2022-02-23] | shopping      |     -2.5 |
 | [2022-02-25] | shopping      |     -2.5 |
-|              |               | -2424.26 |
-#+TBLFM: @21$3=vsum(@2$3..@-1$3)
+| [2022-02-26] | shopping      |    -1238 |
+| [2022-02-27] | takeout       |      -81 |
+|              |               | -3743.26 |
+#+TBLFM: @23$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
   2. 额外疏通水池下水管道50
