--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,36 +13,40 @@
 * Inbox
 * Next Action
 ** TODO [#A] 月度财务收支                                           :event:
-DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
+DEADLINE: <2022-03-12 周六 23:00 +1m> SCHEDULED: <2022-03-12 周六 09:00 +1m>
 :PROPERTIES:
 :LOGGING: DONE(@)
 :END:
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
-| date         | purpose       |    value |
-|--------------+---------------+----------|
-| [2022-02-10] | commute       |      -22 |
-| [2022-02-10] | shopping      |      -15 |
-| [2022-02-12] | house rent    |    -2000 |
-| [2022-02-12] | wf month card |      -50 |
-| [2022-02-12] | takeout       |    -42.4 |
-| [2022-02-13] | takeout       |    -24.9 |
-| [2022-02-13] | takeout       |      -53 |
-| [2022-02-16] | shopping      |    -10.4 |
-| [2022-02-17] | shopping      |     -2.5 |
-| [2022-02-18] | shopping      |     -3.4 |
-| [2022-02-18] | commute       |      -18 |
-| [2022-02-18] | shopping      |    -12.5 |
-| [2022-02-19] | commute       |   -19.16 |
-| [2022-02-20] | buy game      |      -15 |
-| [2022-02-20] | energy bill   |      -50 |
-| [2022-02-20] | takeout       |      -36 |
-| [2022-02-20] | takeout       |      -45 |
-| [2022-02-23] | shopping      |     -2.5 |
-| [2022-02-25] | shopping      |     -2.5 |
-| [2022-02-26] | shopping      |    -1238 |
-| [2022-02-27] | takeout       |      -81 |
-|              |               | -3743.26 |
-#+TBLFM: @23$3=vsum(@2$3..@-1$3)
+| date         | purpose           |    value |
+|--------------+-------------------+----------|
+| [2022-02-12] | house rent        |    -2000 |
+| [2022-02-12] | wf month card     |      -50 |
+| [2022-02-12] | takeout           |    -42.4 |
+| [2022-02-13] | takeout           |    -24.9 |
+| [2022-02-13] | takeout           |      -53 |
+| [2022-02-16] | shopping          |    -10.4 |
+| [2022-02-17] | shopping          |     -2.5 |
+| [2022-02-18] | shopping          |     -3.4 |
+| [2022-02-18] | commute           |      -18 |
+| [2022-02-18] | shopping          |    -12.5 |
+| [2022-02-19] | commute           |   -19.16 |
+| [2022-02-20] | vampire survior   |      -15 |
+| [2022-02-20] | energy bill       |      -50 |
+| [2022-02-20] | takeout           |      -36 |
+| [2022-02-20] | takeout           |      -45 |
+| [2022-02-23] | shopping          |     -2.5 |
+| [2022-02-25] | shopping          |     -2.5 |
+| [2022-02-26] | shopping          |    -1238 |
+| [2022-02-27] | takeout           |      -81 |
+| [2022-02-28] | property fee      |     -118 |
+| [2022-02-28] | energy bill       |      -50 |
+| [2022-02-28] | elden ring        |     -298 |
+| [2022-03-01] | shopping          |      -18 |
+| [2022-03-02] | risk of rain2 dlc |    -32.5 |
+| [2022-03-02] | shopping          |      -15 |
+|              |                   | -4237.76 |
+#+TBLFM: @27$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
   2. 额外疏通水池下水管道50
@@ -54,12 +58,22 @@ DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-03-07 周一 23:00 ++1w> SCHEDULED: <2022-03-04 周五 18:00 ++1w>
+DEADLINE: <2022-03-14 周一 23:00 ++1w> SCHEDULED: <2022-03-11 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-02-26 周六 16:34]
+:LAST_REPEAT: [2022-03-05 周六 16:59]
 :END:
+- State "DONE"       from "TODO"       [2022-03-05 周六 16:59] \\
+  1. 完成季度报告
+  2. 研究UI编辑器自定义控件实现方式
+     - 完成了自定义控件基本配置方式
+     - 搞清楚了自定义控件从编辑器->代码化->业务代码的基本流程
+     - 搞清楚了自定义组建的基本原理
+  ------------------------------------------------
+  1. 雨中冒险2新dlc不错捏, 虚空boss很有史诗感
+  2. 原神G了, 懒得玩了
+  3. 艾尔登法环getdaze
 - State "DONE"       from "TODO"       [2022-02-26 周六 16:34] \\
   1. 实现状态显示工单
      - 新增gm指令支持部分战斗中ui隐藏
@@ -621,12 +635,36 @@ DEADLINE: <2022-03-07 周一 23:00 ++1w> SCHEDULED: <2022-03-04 周五 18:00 ++1
   ------------------------------------------------
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
-** TODO [#A] 每月归档到年度文件                                     :event:
-DEADLINE: <2022-03-02 周三 23:00 ++1m> SCHEDULED: <2022-03-02 周三 09:00 ++1m>
+** TODO [#A] 每月报告及归档                                         :event:
+DEADLINE: <2022-04-02 周六 23:00 ++1m> SCHEDULED: <2022-04-02 周六 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-01-27 周四 16:46]
+:LAST_REPEAT: [2022-02-28 周一 13:22]
+:END:
+- State "DONE"       from "TODO"       [2022-02-28 周一 13:22] \\
+  工作上:
+  1. 学习了spine的基础概念
+  2. 处理工单, 优化战斗退出, 战斗奖励和战斗结束拆分
+  3. 处理工单, 开始战斗限制, 不上阵英雄无法开始战斗
+  4. 实现战斗日志浏览器, 以一种更加方便的方式来浏览战斗导出的日志
+  5. 处理工单, 优化状态显示, 新增状态面板来显示战斗中角色的具体状态
+  生活上:
+  1. 读完了穷爸爸, 富爸爸
+:LOGBOOK:
+CLOCK: [2022-03-01 周二 13:23]--[2022-03-01 周二 13:48] =>  0:25
+CLOCK: [2022-03-01 周二 11:31]--[2022-03-01 周二 11:56] =>  0:25
+CLOCK: [2022-03-01 周二 11:01]--[2022-03-01 周二 11:26] =>  0:25
+CLOCK: [2022-03-01 周二 10:20]--[2022-03-01 周二 10:45] =>  0:25
+CLOCK: [2022-03-01 周二 09:50]--[2022-03-01 周二 10:15] =>  0:25
+CLOCK: [2022-02-28 周一 17:28]--[2022-02-28 周一 17:53] =>  0:25
+CLOCK: [2022-02-28 周一 16:58]--[2022-02-28 周一 17:23] =>  0:25
+CLOCK: [2022-02-28 周一 16:28]--[2022-02-28 周一 16:53] =>  0:25
+CLOCK: [2022-02-28 周一 15:39]--[2022-02-28 周一 16:04] =>  0:25
+CLOCK: [2022-02-28 周一 15:04]--[2022-02-28 周一 15:29] =>  0:25
+CLOCK: [2022-02-28 周一 14:34]--[2022-02-28 周一 14:59] =>  0:25
+CLOCK: [2022-02-28 周一 14:04]--[2022-02-28 周一 14:29] =>  0:25
+CLOCK: [2022-02-28 周一 13:20]--[2022-02-28 周一 13:45] =>  0:25
 :END:
 - State "DONE"       from "TODO"       [2022-01-27 周四 16:46] \\
   工作上:
@@ -748,12 +786,13 @@ DEADLINE: <2022-03-02 周三 23:00 ++1m> SCHEDULED: <2022-03-02 周三 09:00 ++1
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
 ** TODO [#A] 每周学习晨星网投资教程一篇 [0/1]                       :event:
-DEADLINE: <2022-02-27 周日 23:59 +1w> SCHEDULED: <2022-02-21 周一 09:00 +1w>
+DEADLINE: <2022-03-06 周日 23:59 +1w> SCHEDULED: <2022-02-28 周一 09:00 +1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-02-21 周一 01:38]
+:LAST_REPEAT: [2022-02-28 周一 09:20]
 :END:
+- State "DONE"       from "TODO"       [2022-02-28 周一 09:20]
 - [ ] 第一篇
 ** WAIT [#A] 整理财务情况, 设计投资计划                             :event:
 :PROPERTIES:
@@ -768,6 +807,12 @@ DEADLINE: <2022-02-27 周日 23:59 +1w> SCHEDULED: <2022-02-21 周一 09:00 +1w>
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
+** TODO [#A] 减肥 [2/3]                                             :event:
+SCHEDULED: <2022-02-28 周一 17:27 +1w>
+目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
+- [X] 跑步一次 2.5km
+- [X] 跑步一次 3.5km
+- [ ] 跑步一次
 * Appointment
 * Project
 * Someday
