--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -45,8 +45,10 @@ DEADLINE: <2022-03-12 周六 23:00 +1m> SCHEDULED: <2022-03-12 周六 09:00 +1m>
 | [2022-03-01] | shopping          |      -18 |
 | [2022-03-02] | risk of rain2 dlc |    -32.5 |
 | [2022-03-02] | shopping          |      -15 |
-|              |                   | -4237.76 |
-#+TBLFM: @27$3=vsum(@2$3..@-1$3)
+| [2022-03-07] | takeout           |      -45 |
+| [2022-03-07] | shopping          |      -45 |
+|              |                   | -4327.76 |
+#+TBLFM: @29$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
   2. 额外疏通水池下水管道50
@@ -786,12 +788,13 @@ CLOCK: [2022-02-28 周一 13:20]--[2022-02-28 周一 13:45] =>  0:25
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
 ** TODO [#A] 每周学习晨星网投资教程一篇 [0/1]                       :event:
-DEADLINE: <2022-03-06 周日 23:59 +1w> SCHEDULED: <2022-02-28 周一 09:00 +1w>
+DEADLINE: <2022-03-13 周日 23:59 +1w> SCHEDULED: <2022-03-07 周一 09:00 +1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-02-28 周一 09:20]
+:LAST_REPEAT: [2022-03-07 周一 00:26]
 :END:
+- State "DONE"       from "TODO"       [2022-03-07 周一 23:20]
 - State "DONE"       from "TODO"       [2022-02-28 周一 09:20]
 - [ ] 第一篇
 ** WAIT [#A] 整理财务情况, 设计投资计划                             :event:
@@ -807,12 +810,17 @@ DEADLINE: <2022-03-06 周日 23:59 +1w> SCHEDULED: <2022-02-28 周一 09:00 +1w>
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** TODO [#A] 减肥 [2/3]                                             :event:
-SCHEDULED: <2022-02-28 周一 17:27 +1w>
+** TODO [#A] 减肥 [0/3]                                             :event:
+SCHEDULED: <2022-03-07 周一 17:27 +1w>
+:PROPERTIES:
+:LAST_REPEAT: [2022-03-07 周一 00:06]
+:END:
+- State "DONE"       from "TODO"       [2022-03-06 周日 22:06] \\
+  2.5->3.5->4.0
 目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
-- [X] 跑步一次 2.5km
-- [X] 跑步一次 3.5km
-- [ ] 跑步一次
+- [ ] 跑步一次 2.5km
+- [ ] 跑步一次 3.5km
+- [ ] 跑步一次 4.0km
 * Appointment
 * Project
 * Someday
