--- a/src/org/ref/morningstar/featured/资产类别和低迷.org
+++ b/src/org/ref/morningstar/featured/资产类别和低迷.org
@@ -2,7 +2,7 @@
 
 * 经济衰退期债券收益率
   债券收益率受贷款供求、货币政策和通胀预期等因素驱动.
-  [img]
+  [[file:../../../res/image/01.png]]
   1. 美联邦使用联邦基金利率和现金贴现率作为其实施货币政策的主要工具. 经济衰退期,
      降低利率; 经济扩张期, 调高利率
   2. 短期债券利率波动较大, 长期债券利率相对稳定
@@ -15,17 +15,18 @@
   #+end_quote
 
 * 股票回报和货币政策
-
-Historically, stock returns have coincided with changing monetary policy.
-
-Throughout history, the economy and the stock market have experienced cycles, with declines and rallies succeeding each other, as illustrated in the image. The Federal Reserve can influence the direction of the market by changing the federal-funds rate. In a recession, the Fed’s response is usually to decrease the federal-funds rate, which is an expansionary monetary policy. A lower federal-funds rate is achieved through a process of buying government securities in exchange for cash, which is an increase in the money supply. With lower rates and a greater money supply, banks are more likely to lend and people more likely to borrow, which in turn stimulates investment and consumer spending, thus increasing economic activity. When the economy becomes overheated in an economic boom, the Fed typically reverses its stance, raising the federal-funds rate by selling government securities and restricting the money supply, which is a contractionary monetary policy. With higher rates, banks generally lend less, people are less likely to borrow, and economic activity slows.
-
-
-View larger image
-
-The graph illustrates the relationship between Fed monetary policy, market returns, and recessionary periods. Historically, recessionary periods have been marked by stock market underperformance and a lowering of the federal-funds rate. When the economy is doing poorly, the Fed typically lowers the Fed funds rate, increasing the money supply, and spurring economic activity. Conversely, the end of recessionary periods has been marked by stock market outperformance and an eventual increase in the federal-funds rate as the economic boom is reined in by a reduction in the money supply. In general, stock market outperformance follows periods of expansionary monetary policy and stock market underperformance follows periods of contractionary policy. Of course, it is difficult to predict the exact duration of economic cycles, but for the most part, the Fed’s actions and consequent rate movements coincide with up and down swings in stock performance.
-
-Stocks are not guaranteed and have been more volatile than the other asset classes.
+股票回报与货币政策的变化相吻合
+经济和股市都是周期性的, 美联储通过改变基金利率来影响市场走向：
+- 经济衰退 :: 降低基金利率->货币供应提高->银行提高放贷->刺激投资消费
+- 经济过热 :: 提高基金利率->货币供应降低->银行减少放贷->投资消费放缓
+[[file:../../../res/image/02.png]]
+该图说明了美联储货币政策, 市场回报和衰退期之间的关系. 从历史上看, 衰退时期的特点
+是股市表现不佳和联邦基金利率下降. 衰退期结束的标志是股市表现出色. 很难预测经济周
+期的确切持续时间, 但在大多数情况下, 美联储的行动和随之而来的利率变动与股票表现的
+上下波动相吻合.
+  #+begin_quote
+  股票没有保证，并且比其他资产类别波动更大。
+  #+end_quote
 * 各种资产类别和市场的相关性
 Correlation is a measure of the degree to which the movements of two investments are related; the higher the correlation, the more related the performance of the investments. In a downturn, an investor would like, if possible, to be invested in the asset classes least correlated with the market. During the Great Recession, investors saw sharp declines in their portfolios, declines that diversification should have reduced. The magnitude of these losses shook many investors’ faith in the benefits of diversification. It may look like a portfolio is diversified over the long term, but a severe shock to the market can alter traditional correlation structures and expose weaknesses in diversification plans. The table shows the correlation of various asset classes with the market for three time periods: before the most recent recession, during the most recent recession, and for the entire period since January 1980 until December 2020. Since the market collapsed in 2007, the correlations of many asset classes changed significantly, and the diversification benefit they were supposed to offer was reduced. For example, diversifying into commodities, international stocks, or REITs would not have been as effective during the recession as it was beforehand. However, a few correlations stayed in the same range, and some actually declined. For example, gold and intermediate-term government bonds started moving opposite the market during the recession.
 
