--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -47,8 +47,12 @@ DEADLINE: <2022-03-12 周六 23:00 +1m> SCHEDULED: <2022-03-12 周六 09:00 +1m>
 | [2022-03-02] | shopping          |      -15 |
 | [2022-03-07] | takeout           |      -45 |
 | [2022-03-07] | shopping          |      -45 |
-|              |                   | -4327.76 |
-#+TBLFM: @29$3=vsum(@2$3..@-1$3)
+| [2022-03-08] | shopping          |      -15 |
+| [2022-03-09] | shopping          |     -2.5 |
+| [2022-03-10] | shopping          |      -17 |
+| [2022-03-11] | vault of the void |      -50 |
+|              |                   | -4412.26 |
+#+TBLFM: @33$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
   2. 额外疏通水池下水管道50
@@ -60,12 +64,20 @@ DEADLINE: <2022-03-12 周六 23:00 +1m> SCHEDULED: <2022-03-12 周六 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-03-14 周一 23:00 ++1w> SCHEDULED: <2022-03-11 周五 18:00 ++1w>
+DEADLINE: <2022-03-21 周一 23:00 ++1w> SCHEDULED: <2022-03-18 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-03-05 周六 16:59]
+:LAST_REPEAT: [2022-03-11 周五 20:49]
 :END:
+- State "DONE"       from "TODO"       [2022-03-11 周五 20:49] \\
+  1. 初步完成了ui编辑器自定义控件的研究
+     - 搭建了M8的自定义控件基本框架
+     - 实现了一个ui自定义控件生成器来快速生成控件代码
+     - 实现了自定义控件(拖拽容器), 并编写说明文档
+     - 了解了组件的基本原理, 并添加了两个自定义组件(无功能)
+  ------------------------------------------------
+  1. 有点上瘾, 我的环
 - State "DONE"       from "TODO"       [2022-03-05 周六 16:59] \\
   1. 完成季度报告
   2. 研究UI编辑器自定义控件实现方式
@@ -787,16 +799,22 @@ CLOCK: [2022-02-28 周一 13:20]--[2022-02-28 周一 13:45] =>  0:25
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** TODO [#A] 每周学习晨星网投资教程一篇 [0/1]                       :event:
-DEADLINE: <2022-03-13 周日 23:59 +1w> SCHEDULED: <2022-03-07 周一 09:00 +1w>
+** TODO [#A] 每周学习晨星网投资教程一篇 [1/1]                       :event:
+DEADLINE: <2022-03-20 周日 23:59 +1w> SCHEDULED: <2022-03-14 周一 09:00 +1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-03-07 周一 00:26]
+:LAST_REPEAT: [2022-03-07 周一 15:39]
 :END:
-- State "DONE"       from "TODO"       [2022-03-07 周一 23:20]
+- State "DONE"       from "TODO"       [2022-03-07 周一 15:39]
+:LOGBOOK:
+CLOCK: [2022-03-07 周一 15:27]--[2022-03-07 周一 15:39] =>  0:12
+CLOCK: [2022-03-07 周一 14:57]--[2022-03-07 周一 15:22] =>  0:25
+CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
+:END:
+- State "DONE"       from "TODO"       [2022-03-06 周日 23:20]
 - State "DONE"       from "TODO"       [2022-02-28 周一 09:20]
-- [ ] 第一篇
+- [X] 第一篇
 ** WAIT [#A] 整理财务情况, 设计投资计划                             :event:
 :PROPERTIES:
 :STYLE:    habit
@@ -810,16 +828,16 @@ DEADLINE: <2022-03-13 周日 23:59 +1w> SCHEDULED: <2022-03-07 周一 09:00 +1w>
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** TODO [#A] 减肥 [0/3]                                             :event:
+** TODO [#A] 减肥 [2/3]                                             :event:
 SCHEDULED: <2022-03-07 周一 17:27 +1w>
 :PROPERTIES:
 :LAST_REPEAT: [2022-03-07 周一 00:06]
 :END:
 - State "DONE"       from "TODO"       [2022-03-06 周日 22:06] \\
-  2.5->3.5->4.0
+  2.5->3.5->4.0, 76.1kg
 目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
-- [ ] 跑步一次 2.5km
-- [ ] 跑步一次 3.5km
+- [X] 跑步一次 4.0km
+- [X] 跑步一次 4.0km
 - [ ] 跑步一次 4.0km
 * Appointment
 * Project
