--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,11 +14,12 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-03-19 周六 18:00 ++1w> DEADLINE: <2022-03-21 周一 12:00 ++1w>
+SCHEDULED: <2022-03-26 周六 18:00 ++1w> DEADLINE: <2022-03-28 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-03-11 周五 20:56]
+:LAST_REPEAT: [2022-03-19 周六 16:27]
 :END:
+- State "DONE"       from "TODO"       [2022-03-19 周六 16:27]
 - State "DONE"       from "TODO"       [2022-03-11 周五 20:56]
 - State "DONE"       from "TODO"       [2022-03-05 周六 17:02]
 - State "DONE"       from "TODO"       [2022-02-26 周六 16:40]
@@ -72,14 +73,16 @@ SCHEDULED: <2022-03-19 周六 18:00 ++1w> DEADLINE: <2022-03-21 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#C] 每周完成leetcode一道题 [0/1]                           :learn:
-SCHEDULED: <2022-03-14 周一 09:00 ++1w>
+** TODO [#C] 每周完成leetcode一道题 [1/1]                           :learn:
+SCHEDULED: <2022-03-21 周一 09:00 ++1w>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2022-03-07 周一 11:41]
+:LAST_REPEAT: [2022-03-14 周一 09:39]
 :END:
+- State "DONE"       from "TODO"       [2022-03-14 周一 09:39]
 :LOGBOOK:
+CLOCK: [2022-03-14 周一 09:30]--[2022-03-14 周一 09:39] =>  0:09
 CLOCK: [2022-03-07 周一 11:10]--[2022-03-07 周一 11:35] =>  0:25
 CLOCK: [2022-03-07 周一 10:24]--[2022-03-07 周一 10:49] =>  0:25
 :END:
@@ -90,12 +93,14 @@ CLOCK: [2022-03-07 周一 10:24]--[2022-03-07 周一 10:49] =>  0:25
 - Note taken ok [2022-02-14 周一 09:51] \\
   学到了一个很新颖的思路, n个队伍比赛在每个队伍失败一次就淘汰的情况下最多打几场,
   答案是n-1场, 因为最后只有一个队伍获胜
-- [ ] 完成一道题
+- [X] 完成一道题
 ** TODO [#A] 每周45个番茄钟 [0/5]                                    :work:
-DEADLINE: <2022-03-18 周五 09:00 +1w> SCHEDULED: <2022-03-14 周一 09:00 +1w>
+DEADLINE: <2022-03-25 周五 09:00 +1w> SCHEDULED: <2022-03-21 周一 09:00 +1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-03-11 周五 18:23]
+:LAST_REPEAT: [2022-03-19 周六 15:13]
 :END:
+- State "DONE"       from "TODO"       [2022-03-19 周六 15:13] \\
+  48钟
 - State "DONE"       from "TODO"       [2022-03-11 周五 18:23] \\
   58钟
 - State "DONE"       from "TODO"       [2022-03-04 周五 19:07] \\
@@ -107,10 +112,10 @@ DEADLINE: <2022-03-18 周五 09:00 +1w> SCHEDULED: <2022-03-14 周一 09:00 +1w>
 :LOGBOOK:
 :END:
 - [ ] 8
-- [ ] 13
-- [ ] 14
+- [ ] 12
+- [ ] 9
+- [ ] 9
 - [ ] 10
-- [ ] 13
 ** WAIT [#B] 学习《重构 改善既有代码的设计》                        :learn:
 :PROPERTIES:
 :BLOCKER:  olp("work.org" "Next Action/每周学习《代码之外的生存指南》5篇")
@@ -134,67 +139,6 @@ CLOCK: [2022-03-07 周一 17:25]--[2022-03-07 周一 17:50] =>  0:25
 CLOCK: [2022-03-07 周一 16:50]--[2022-03-07 周一 17:15] =>  0:25
 :END:
 - [X] 第一篇
-** TODO [#A] UI编辑器自定义控件和组件研究                              :m8:
-SCHEDULED: <2022-03-03 周四 10:42>
-:LOGBOOK:
-CLOCK: [2022-03-11 周五 17:14]--[2022-03-11 周五 17:39] =>  0:25
-CLOCK: [2022-03-11 周五 16:44]--[2022-03-11 周五 17:09] =>  0:25
-CLOCK: [2022-03-11 周五 16:09]--[2022-03-11 周五 16:34] =>  0:25
-CLOCK: [2022-03-11 周五 15:09]--[2022-03-11 周五 15:34] =>  0:25
-CLOCK: [2022-03-11 周五 14:39]--[2022-03-11 周五 15:04] =>  0:25
-CLOCK: [2022-03-11 周五 14:04]--[2022-03-11 周五 14:29] =>  0:25
-CLOCK: [2022-03-11 周五 13:34]--[2022-03-11 周五 13:59] =>  0:25
-CLOCK: [2022-03-11 周五 13:04]--[2022-03-11 周五 13:29] =>  0:25
-CLOCK: [2022-03-11 周五 11:33]--[2022-03-11 周五 11:58] =>  0:25
-CLOCK: [2022-03-11 周五 10:58]--[2022-03-11 周五 11:23] =>  0:25
-CLOCK: [2022-03-11 周五 10:28]--[2022-03-11 周五 10:53] =>  0:25
-CLOCK: [2022-03-11 周五 09:58]--[2022-03-11 周五 10:23] =>  0:25
-CLOCK: [2022-03-11 周五 09:28]--[2022-03-11 周五 09:53] =>  0:25
-CLOCK: [2022-03-10 周四 15:16]--[2022-03-10 周四 15:41] =>  0:25
-CLOCK: [2022-03-10 周四 14:46]--[2022-03-10 周四 15:11] =>  0:25
-CLOCK: [2022-03-10 周四 14:11]--[2022-03-10 周四 14:36] =>  0:25
-CLOCK: [2022-03-10 周四 13:41]--[2022-03-10 周四 14:06] =>  0:25
-CLOCK: [2022-03-10 周四 13:11]--[2022-03-10 周四 13:36] =>  0:25
-CLOCK: [2022-03-10 周四 11:21]--[2022-03-10 周四 11:46] =>  0:25
-CLOCK: [2022-03-10 周四 10:46]--[2022-03-10 周四 11:11] =>  0:25
-CLOCK: [2022-03-10 周四 10:16]--[2022-03-10 周四 10:41] =>  0:25
-CLOCK: [2022-03-10 周四 09:46]--[2022-03-10 周四 10:11] =>  0:25
-CLOCK: [2022-03-10 周四 09:16]--[2022-03-10 周四 09:41] =>  0:25
-CLOCK: [2022-03-09 周三 20:01]--[2022-03-09 周三 20:26] =>  0:25
-CLOCK: [2022-03-09 周三 19:26]--[2022-03-09 周三 19:51] =>  0:25
-CLOCK: [2022-03-09 周三 17:56]--[2022-03-09 周三 18:21] =>  0:25
-CLOCK: [2022-03-09 周三 17:21]--[2022-03-09 周三 17:46] =>  0:25
-CLOCK: [2022-03-09 周三 16:51]--[2022-03-09 周三 17:16] =>  0:25
-CLOCK: [2022-03-09 周三 16:20]--[2022-03-09 周三 16:45] =>  0:25
-CLOCK: [2022-03-09 周三 15:15]--[2022-03-09 周三 15:40] =>  0:25
-CLOCK: [2022-03-09 周三 14:45]--[2022-03-09 周三 15:10] =>  0:25
-CLOCK: [2022-03-09 周三 14:15]--[2022-03-09 周三 14:40] =>  0:25
-CLOCK: [2022-03-09 周三 13:45]--[2022-03-09 周三 14:10] =>  0:25
-CLOCK: [2022-03-09 周三 13:10]--[2022-03-09 周三 13:35] =>  0:25
-CLOCK: [2022-03-09 周三 10:48]--[2022-03-09 周三 11:13] =>  0:25
-CLOCK: [2022-03-09 周三 10:18]--[2022-03-09 周三 10:43] =>  0:25
-CLOCK: [2022-03-09 周三 09:48]--[2022-03-09 周三 10:13] =>  0:25
-CLOCK: [2022-03-08 周二 17:09]--[2022-03-08 周二 17:34] =>  0:25
-CLOCK: [2022-03-08 周二 16:39]--[2022-03-08 周二 17:04] =>  0:25
-CLOCK: [2022-03-08 周二 15:38]--[2022-03-08 周二 16:03] =>  0:25
-CLOCK: [2022-03-08 周二 15:03]--[2022-03-08 周二 15:28] =>  0:25
-CLOCK: [2022-03-04 周五 17:16]--[2022-03-04 周五 17:41] =>  0:25
-CLOCK: [2022-03-04 周五 14:59]--[2022-03-04 周五 15:24] =>  0:25
-CLOCK: [2022-03-04 周五 14:24]--[2022-03-04 周五 14:49] =>  0:25
-CLOCK: [2022-03-04 周五 10:32]--[2022-03-04 周五 10:57] =>  0:25
-CLOCK: [2022-03-04 周五 10:02]--[2022-03-04 周五 10:27] =>  0:25
-CLOCK: [2022-03-03 周四 17:28]--[2022-03-03 周四 17:53] =>  0:25
-CLOCK: [2022-03-03 周四 16:58]--[2022-03-03 周四 17:23] =>  0:25
-CLOCK: [2022-03-03 周四 16:23]--[2022-03-03 周四 16:48] =>  0:25
-CLOCK: [2022-03-03 周四 15:23]--[2022-03-03 周四 15:48] =>  0:25
-CLOCK: [2022-03-03 周四 14:53]--[2022-03-03 周四 15:18] =>  0:25
-CLOCK: [2022-03-03 周四 14:18]--[2022-03-03 周四 14:43] =>  0:25
-CLOCK: [2022-03-03 周四 13:48]--[2022-03-03 周四 14:13] =>  0:25
-CLOCK: [2022-03-03 周四 13:18]--[2022-03-03 周四 13:43] =>  0:25
-CLOCK: [2022-03-03 周四 11:43]--[2022-03-03 周四 12:08] =>  0:25
-CLOCK: [2022-03-03 周四 11:13]--[2022-03-03 周四 11:38] =>  0:25
-CLOCK: [2022-03-03 周四 10:43]--[2022-03-03 周四 11:08] =>  0:25
-:END:
 ** Archive                                                         :ARCHIVE:
 *** DONE [#A] 每周学习《代码之外的生存指南》5篇                     :learn:
 SCHEDULED: <2022-03-07 周一 +1w>
@@ -261,10 +205,136 @@ CLOCK: [2022-03-04 周五 16:34]--[2022-03-04 周五 16:59] =>  0:25
 CLOCK: [2022-03-04 周五 13:27]--[2022-03-04 周五 13:52] =>  0:25
 CLOCK: [2022-03-04 周五 11:09]--[2022-03-04 周五 11:34] =>  0:25
 :END:
-** DONE [#A] 处理无敌盾跳字物伤魔伤统一为伤害免疫                      :m8:
+*** DONE [#A] UI编辑器自定义控件和组件研究                             :m8:
+CLOSED: [2022-03-18 周五 09:29] SCHEDULED: <2022-03-03 周四 10:42>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-03-19 周六 16:18
+:END:
+:LOGBOOK:
+CLOCK: [2022-03-17 周四 11:01]--[2022-03-17 周四 11:26] =>  0:25
+CLOCK: [2022-03-17 周四 10:31]--[2022-03-17 周四 10:56] =>  0:25
+CLOCK: [2022-03-17 周四 10:01]--[2022-03-17 周四 10:26] =>  0:25
+CLOCK: [2022-03-17 周四 09:31]--[2022-03-17 周四 09:56] =>  0:25
+CLOCK: [2022-03-16 周三 17:07]--[2022-03-16 周三 17:32] =>  0:25
+CLOCK: [2022-03-16 周三 16:37]--[2022-03-16 周三 17:02] =>  0:25
+CLOCK: [2022-03-16 周三 16:07]--[2022-03-16 周三 16:32] =>  0:25
+CLOCK: [2022-03-16 周三 15:37]--[2022-03-16 周三 16:02] =>  0:25
+CLOCK: [2022-03-16 周三 15:02]--[2022-03-16 周三 15:27] =>  0:25
+CLOCK: [2022-03-16 周三 14:32]--[2022-03-16 周三 14:57] =>  0:25
+CLOCK: [2022-03-16 周三 14:02]--[2022-03-16 周三 14:27] =>  0:25
+CLOCK: [2022-03-16 周三 13:32]--[2022-03-16 周三 13:57] =>  0:25
+CLOCK: [2022-03-15 周二 17:22]--[2022-03-15 周二 17:47] =>  0:25
+CLOCK: [2022-03-15 周二 16:52]--[2022-03-15 周二 17:17] =>  0:25
+CLOCK: [2022-03-15 周二 16:22]--[2022-03-15 周二 16:47] =>  0:25
+CLOCK: [2022-03-15 周二 15:34]--[2022-03-15 周二 15:59] =>  0:25
+CLOCK: [2022-03-15 周二 14:59]--[2022-03-15 周二 15:24] =>  0:25
+CLOCK: [2022-03-15 周二 14:29]--[2022-03-15 周二 14:54] =>  0:25
+CLOCK: [2022-03-15 周二 13:59]--[2022-03-15 周二 14:24] =>  0:25
+CLOCK: [2022-03-15 周二 13:29]--[2022-03-15 周二 13:54] =>  0:25
+CLOCK: [2022-03-15 周二 11:22]--[2022-03-15 周二 11:47] =>  0:25
+CLOCK: [2022-03-15 周二 10:52]--[2022-03-15 周二 11:17] =>  0:25
+CLOCK: [2022-03-15 周二 10:22]--[2022-03-15 周二 10:47] =>  0:25
+CLOCK: [2022-03-15 周二 09:52]--[2022-03-15 周二 10:17] =>  0:25
+CLOCK: [2022-03-14 周一 15:22]--[2022-03-14 周一 15:47] =>  0:25
+CLOCK: [2022-03-11 周五 17:14]--[2022-03-11 周五 17:39] =>  0:25
+CLOCK: [2022-03-11 周五 16:44]--[2022-03-11 周五 17:09] =>  0:25
+CLOCK: [2022-03-11 周五 16:09]--[2022-03-11 周五 16:34] =>  0:25
+CLOCK: [2022-03-11 周五 15:09]--[2022-03-11 周五 15:34] =>  0:25
+CLOCK: [2022-03-11 周五 14:39]--[2022-03-11 周五 15:04] =>  0:25
+CLOCK: [2022-03-11 周五 14:04]--[2022-03-11 周五 14:29] =>  0:25
+CLOCK: [2022-03-11 周五 13:34]--[2022-03-11 周五 13:59] =>  0:25
+CLOCK: [2022-03-11 周五 13:04]--[2022-03-11 周五 13:29] =>  0:25
+CLOCK: [2022-03-11 周五 11:33]--[2022-03-11 周五 11:58] =>  0:25
+CLOCK: [2022-03-11 周五 10:58]--[2022-03-11 周五 11:23] =>  0:25
+CLOCK: [2022-03-11 周五 10:28]--[2022-03-11 周五 10:53] =>  0:25
+CLOCK: [2022-03-11 周五 09:58]--[2022-03-11 周五 10:23] =>  0:25
+CLOCK: [2022-03-11 周五 09:28]--[2022-03-11 周五 09:53] =>  0:25
+CLOCK: [2022-03-10 周四 15:16]--[2022-03-10 周四 15:41] =>  0:25
+CLOCK: [2022-03-10 周四 14:46]--[2022-03-10 周四 15:11] =>  0:25
+CLOCK: [2022-03-10 周四 14:11]--[2022-03-10 周四 14:36] =>  0:25
+CLOCK: [2022-03-10 周四 13:41]--[2022-03-10 周四 14:06] =>  0:25
+CLOCK: [2022-03-10 周四 13:11]--[2022-03-10 周四 13:36] =>  0:25
+CLOCK: [2022-03-10 周四 11:21]--[2022-03-10 周四 11:46] =>  0:25
+CLOCK: [2022-03-10 周四 10:46]--[2022-03-10 周四 11:11] =>  0:25
+CLOCK: [2022-03-10 周四 10:16]--[2022-03-10 周四 10:41] =>  0:25
+CLOCK: [2022-03-10 周四 09:46]--[2022-03-10 周四 10:11] =>  0:25
+CLOCK: [2022-03-10 周四 09:16]--[2022-03-10 周四 09:41] =>  0:25
+CLOCK: [2022-03-09 周三 20:01]--[2022-03-09 周三 20:26] =>  0:25
+CLOCK: [2022-03-09 周三 19:26]--[2022-03-09 周三 19:51] =>  0:25
+CLOCK: [2022-03-09 周三 17:56]--[2022-03-09 周三 18:21] =>  0:25
+CLOCK: [2022-03-09 周三 17:21]--[2022-03-09 周三 17:46] =>  0:25
+CLOCK: [2022-03-09 周三 16:51]--[2022-03-09 周三 17:16] =>  0:25
+CLOCK: [2022-03-09 周三 16:20]--[2022-03-09 周三 16:45] =>  0:25
+CLOCK: [2022-03-09 周三 15:15]--[2022-03-09 周三 15:40] =>  0:25
+CLOCK: [2022-03-09 周三 14:45]--[2022-03-09 周三 15:10] =>  0:25
+CLOCK: [2022-03-09 周三 14:15]--[2022-03-09 周三 14:40] =>  0:25
+CLOCK: [2022-03-09 周三 13:45]--[2022-03-09 周三 14:10] =>  0:25
+CLOCK: [2022-03-09 周三 13:10]--[2022-03-09 周三 13:35] =>  0:25
+CLOCK: [2022-03-09 周三 10:48]--[2022-03-09 周三 11:13] =>  0:25
+CLOCK: [2022-03-09 周三 10:18]--[2022-03-09 周三 10:43] =>  0:25
+CLOCK: [2022-03-09 周三 09:48]--[2022-03-09 周三 10:13] =>  0:25
+CLOCK: [2022-03-08 周二 17:09]--[2022-03-08 周二 17:34] =>  0:25
+CLOCK: [2022-03-08 周二 16:39]--[2022-03-08 周二 17:04] =>  0:25
+CLOCK: [2022-03-08 周二 15:38]--[2022-03-08 周二 16:03] =>  0:25
+CLOCK: [2022-03-08 周二 15:03]--[2022-03-08 周二 15:28] =>  0:25
+CLOCK: [2022-03-04 周五 17:16]--[2022-03-04 周五 17:41] =>  0:25
+CLOCK: [2022-03-04 周五 14:59]--[2022-03-04 周五 15:24] =>  0:25
+CLOCK: [2022-03-04 周五 14:24]--[2022-03-04 周五 14:49] =>  0:25
+CLOCK: [2022-03-04 周五 10:32]--[2022-03-04 周五 10:57] =>  0:25
+CLOCK: [2022-03-04 周五 10:02]--[2022-03-04 周五 10:27] =>  0:25
+CLOCK: [2022-03-03 周四 17:28]--[2022-03-03 周四 17:53] =>  0:25
+CLOCK: [2022-03-03 周四 16:58]--[2022-03-03 周四 17:23] =>  0:25
+CLOCK: [2022-03-03 周四 16:23]--[2022-03-03 周四 16:48] =>  0:25
+CLOCK: [2022-03-03 周四 15:23]--[2022-03-03 周四 15:48] =>  0:25
+CLOCK: [2022-03-03 周四 14:53]--[2022-03-03 周四 15:18] =>  0:25
+CLOCK: [2022-03-03 周四 14:18]--[2022-03-03 周四 14:43] =>  0:25
+CLOCK: [2022-03-03 周四 13:48]--[2022-03-03 周四 14:13] =>  0:25
+CLOCK: [2022-03-03 周四 13:18]--[2022-03-03 周四 13:43] =>  0:25
+CLOCK: [2022-03-03 周四 11:43]--[2022-03-03 周四 12:08] =>  0:25
+CLOCK: [2022-03-03 周四 11:13]--[2022-03-03 周四 11:38] =>  0:25
+CLOCK: [2022-03-03 周四 10:43]--[2022-03-03 周四 11:08] =>  0:25
+:END:
+*** DONE [#A] 处理无敌盾跳字物伤魔伤统一为伤害免疫                     :m8:
 CLOSED: [2022-03-08 周二 16:39] SCHEDULED: <2022-03-08 周二 15:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-03-19 周六 16:18
+:END:
 :LOGBOOK:
 CLOCK: [2022-03-08 周二 14:33]--[2022-03-08 周二 14:58] =>  0:25
+:END:
+*** DONE [#A] 第一回合开始前所有角色同步施法                           :m8:
+CLOSED: [2022-03-14 周一 14:50] SCHEDULED: <2022-03-14 周一 10:51>
+:PROPERTIES:
+:Effort:   3:20
+:ARCHIVE_TIME: 2022-03-19 周六 16:18
+:END:
+:LOGBOOK:
+CLOCK: [2022-03-14 周一 14:19]--[2022-03-14 周一 14:44] =>  0:25
+CLOCK: [2022-03-14 周一 13:49]--[2022-03-14 周一 14:14] =>  0:25
+CLOCK: [2022-03-14 周一 13:19]--[2022-03-14 周一 13:44] =>  0:25
+CLOCK: [2022-03-14 周一 11:22]--[2022-03-14 周一 11:47] =>  0:25
+CLOCK: [2022-03-14 周一 10:52]--[2022-03-14 周一 11:17] =>  0:25
+:END:
+** TODO [#A] 状态信息面板优化                                          :m8:
+DEADLINE: <2022-03-25 周五> SCHEDULED: <2022-03-17 周四 13:00>
+:LOGBOOK:
+CLOCK: [2022-03-18 周五 16:58]--[2022-03-18 周五 17:23] =>  0:25
+CLOCK: [2022-03-18 周五 15:53]--[2022-03-18 周五 16:18] =>  0:25
+CLOCK: [2022-03-18 周五 15:23]--[2022-03-18 周五 15:48] =>  0:25
+CLOCK: [2022-03-18 周五 14:53]--[2022-03-18 周五 15:18] =>  0:25
+CLOCK: [2022-03-18 周五 14:18]--[2022-03-18 周五 14:43] =>  0:25
+CLOCK: [2022-03-18 周五 13:48]--[2022-03-18 周五 14:13] =>  0:25
+CLOCK: [2022-03-18 周五 13:17]--[2022-03-18 周五 13:42] =>  0:25
+CLOCK: [2022-03-18 周五 11:34]--[2022-03-18 周五 11:59] =>  0:25
+CLOCK: [2022-03-18 周五 10:59]--[2022-03-18 周五 11:24] =>  0:25
+CLOCK: [2022-03-18 周五 10:29]--[2022-03-18 周五 10:54] =>  0:25
+CLOCK: [2022-03-18 周五 09:59]--[2022-03-18 周五 10:24] =>  0:25
+CLOCK: [2022-03-18 周五 09:29]--[2022-03-18 周五 09:54] =>  0:25
+CLOCK: [2022-03-17 周四 16:44]--[2022-03-17 周四 17:09] =>  0:25
+CLOCK: [2022-03-17 周四 16:09]--[2022-03-17 周四 16:34] =>  0:25
+CLOCK: [2022-03-17 周四 15:39]--[2022-03-17 周四 16:04] =>  0:25
+CLOCK: [2022-03-17 周四 15:09]--[2022-03-17 周四 15:34] =>  0:25
+CLOCK: [2022-03-17 周四 14:39]--[2022-03-17 周四 15:04] =>  0:25
 :END:
 * Appointment
 * Project
