--- a/src/org/ref/morningstar/featured/资产类别和低迷.org
+++ b/src/org/ref/morningstar/featured/资产类别和低迷.org
@@ -53,22 +53,20 @@
 - 投资者作为债权人时, 公司证券存在违约的风险
 
 * 金融危机之后的美国市场复苏, 平衡的投资组合
-Stock prices suffer during financial crises. However, a balanced portfolio can help mitigate some of the risk.
+股价在金融危机时受挫, 但一个平衡的投资组合可以减轻风险
+[[file:../../../res/image/04.png]]
+在使用(60%股票/40%证券)的投资组合下, 尽管在遭受危机时的短期内会有损失, 但长期来看.
+坚持到底的投资者会收获丰厚的回报.
+** 小心恐惧
+恐惧和不确定性可能会导致投资者在压力下出售资产, 这不但会导致短期损失, 更为重要的
+是, 随着投资者等待并犹豫着是否回归市场, 很有可能错过股市复苏潜在甚至全部的收益.
+这告诉我们, 耐心才会有回报.
 
-
-View larger image
-
-This image illustrates the cumulative returns of a balanced (60% stock/40% bond) portfolio after six historical U.S. financial crises. In the short term, uncertainty from such external shocks can create sudden drops in value. For example, the balanced portfolio posted a negative return in the month following three of the six analyzed crises. Over longer periods of time, however, returns were much more attractive, and investors who stayed the course reaped considerable rewards.
-
-Beware of fear
-Fear and uncertainty might lead investors to sell their investments during tough times, putting downward pressure on prices. Trading because of these emotions can be detrimental to a portfolio’s value. By selling during downward price pressures, investors might realize short-term losses. Furthermore, this is compounded as investors wait and hesitate to get back into the market, possibly missing some or all of the potential recovery. The lesson here is that patience can pay dividends.
-
-THINGS TO KNOW
-The lesson here is that patience can pay dividends.
-Diversification is a valuable strategy, but it has its limits
-Diversification can also limit losses during turbulent market conditions. One of the main advantages of diversification is reducing risk over the long run, not necessarily increasing return. While stocks offer the potential for higher returns, the downside risk can also be extreme. A diversified portfolio can help mitigate such extreme swings in value.
-
-Diversification does not eliminate the risk of experiencing investment losses. Government bonds are guaranteed by the full faith and credit of the U.S. government as to the timely payment of principal and interest, while returns and principal invested in stocks are not guaranteed. Stocks have been more volatile than bonds.
+#+begin_quote
+耐心才会有回报
+分散投资是一个有价值的策略, 但是也有其局限
+分散投资也有亏损的情况, 但它的主要优势是降低风险, 而不是提高收益
+#+end_quote
 * 金融危机之后的美国市场复苏, 全股票投资组合
 Stock prices suffer during financial crises, but they typically recover over time.
 
