[org]update note

--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,11 +14,12 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-03-26 周六 18:00 ++1w> DEADLINE: <2022-03-28 周一 12:00 ++1w>
+SCHEDULED: <2022-04-02 周六 18:00 ++1w> DEADLINE: <2022-04-04 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-03-19 周六 16:27]
+:LAST_REPEAT: [2022-03-26 周六 16:22]
 :END:
+- State "DONE"       from "TODO"       [2022-03-26 周六 16:22]
 - State "DONE"       from "TODO"       [2022-03-19 周六 16:27]
 - State "DONE"       from "TODO"       [2022-03-11 周五 20:56]
 - State "DONE"       from "TODO"       [2022-03-05 周六 17:02]
@@ -74,12 +75,13 @@ SCHEDULED: <2022-03-26 周六 18:00 ++1w> DEADLINE: <2022-03-28 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 每周完成leetcode一道题 [1/1]                           :learn:
-SCHEDULED: <2022-03-21 周一 09:00 ++1w>
+SCHEDULED: <2022-03-28 周一 09:00 ++1w>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2022-03-14 周一 09:39]
+:LAST_REPEAT: [2022-03-21 周一 09:42]
 :END:
+- State "DONE"       from "TODO"       [2022-03-21 周一 09:42]
 - State "DONE"       from "TODO"       [2022-03-14 周一 09:39]
 :LOGBOOK:
 CLOCK: [2022-03-14 周一 09:30]--[2022-03-14 周一 09:39] =>  0:09
@@ -95,10 +97,12 @@ CLOCK: [2022-03-07 周一 10:24]--[2022-03-07 周一 10:49] =>  0:25
   答案是n-1场, 因为最后只有一个队伍获胜
 - [X] 完成一道题
 ** TODO [#A] 每周45个番茄钟 [0/5]                                    :work:
-DEADLINE: <2022-03-25 周五 09:00 +1w> SCHEDULED: <2022-03-21 周一 09:00 +1w>
+DEADLINE: <2022-04-01 周五 09:00 +1w> SCHEDULED: <2022-03-28 周一 09:00 +1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-03-19 周六 15:13]
+:LAST_REPEAT: [2022-03-26 周六 16:15]
 :END:
+- State "DONE"       from "TODO"       [2022-03-26 周六 16:15] \\
+  47钟
 - State "DONE"       from "TODO"       [2022-03-19 周六 15:13] \\
   48钟
 - State "DONE"       from "TODO"       [2022-03-11 周五 18:23] \\
@@ -112,10 +116,10 @@ DEADLINE: <2022-03-25 周五 09:00 +1w> SCHEDULED: <2022-03-21 周一 09:00 +1w>
 :LOGBOOK:
 :END:
 - [ ] 8
-- [ ] 12
-- [ ] 9
-- [ ] 9
+- [ ] 13
+- [ ] 16
 - [ ] 10
+- [ ] 0
 ** WAIT [#B] 学习《重构 改善既有代码的设计》                        :learn:
 :PROPERTIES:
 :BLOCKER:  olp("work.org" "Next Action/每周学习《代码之外的生存指南》5篇")
@@ -315,9 +319,43 @@ CLOCK: [2022-03-14 周一 13:19]--[2022-03-14 周一 13:44] =>  0:25
 CLOCK: [2022-03-14 周一 11:22]--[2022-03-14 周一 11:47] =>  0:25
 CLOCK: [2022-03-14 周一 10:52]--[2022-03-14 周一 11:17] =>  0:25
 :END:
-** TODO [#A] 状态信息面板优化                                          :m8:
-DEADLINE: <2022-03-25 周五> SCHEDULED: <2022-03-17 周四 13:00>
+** DONE [#A] 状态信息面板优化                                          :m8:
+CLOSED: [2022-03-25 周五 09:52] DEADLINE: <2022-03-25 周五> SCHEDULED: <2022-03-17 周四 13:00>
 :LOGBOOK:
+CLOCK: [2022-03-23 周三 20:31]--[2022-03-23 周三 20:56] =>  0:25
+CLOCK: [2022-03-23 周三 18:56]--[2022-03-23 周三 19:21] =>  0:25
+CLOCK: [2022-03-23 周三 17:21]--[2022-03-23 周三 17:46] =>  0:25
+CLOCK: [2022-03-23 周三 16:51]--[2022-03-23 周三 17:16] =>  0:25
+CLOCK: [2022-03-23 周三 16:21]--[2022-03-23 周三 16:46] =>  0:25
+CLOCK: [2022-03-23 周三 15:51]--[2022-03-23 周三 16:16] =>  0:25
+CLOCK: [2022-03-23 周三 15:16]--[2022-03-23 周三 15:41] =>  0:25
+CLOCK: [2022-03-23 周三 14:46]--[2022-03-23 周三 15:11] =>  0:25
+CLOCK: [2022-03-23 周三 14:16]--[2022-03-23 周三 14:41] =>  0:25
+CLOCK: [2022-03-23 周三 13:46]--[2022-03-23 周三 14:11] =>  0:25
+CLOCK: [2022-03-23 周三 13:11]--[2022-03-23 周三 13:36] =>  0:25
+CLOCK: [2022-03-23 周三 11:29]--[2022-03-23 周三 11:54] =>  0:25
+CLOCK: [2022-03-23 周三 10:54]--[2022-03-23 周三 11:19] =>  0:25
+CLOCK: [2022-03-23 周三 10:24]--[2022-03-23 周三 10:49] =>  0:25
+CLOCK: [2022-03-23 周三 09:47]--[2022-03-23 周三 10:12] =>  0:25
+CLOCK: [2022-03-23 周三 09:17]--[2022-03-23 周三 09:42] =>  0:25
+CLOCK: [2022-03-22 周二 17:32]--[2022-03-22 周二 17:57] =>  0:25
+CLOCK: [2022-03-22 周二 17:02]--[2022-03-22 周二 17:27] =>  0:25
+CLOCK: [2022-03-22 周二 16:27]--[2022-03-22 周二 16:52] =>  0:25
+CLOCK: [2022-03-22 周二 15:57]--[2022-03-22 周二 16:22] =>  0:25
+CLOCK: [2022-03-22 周二 15:27]--[2022-03-22 周二 15:52] =>  0:25
+CLOCK: [2022-03-22 周二 14:57]--[2022-03-22 周二 15:22] =>  0:25
+CLOCK: [2022-03-22 周二 14:21]--[2022-03-22 周二 14:47] =>  0:26
+CLOCK: [2022-03-22 周二 13:51]--[2022-03-22 周二 14:16] =>  0:25
+CLOCK: [2022-03-22 周二 13:21]--[2022-03-22 周二 13:46] =>  0:25
+CLOCK: [2022-03-22 周二 11:10]--[2022-03-22 周二 11:35] =>  0:25
+CLOCK: [2022-03-22 周二 10:40]--[2022-03-22 周二 11:05] =>  0:25
+CLOCK: [2022-03-21 周一 17:13]--[2022-03-21 周一 17:38] =>  0:25
+CLOCK: [2022-03-21 周一 16:43]--[2022-03-21 周一 17:08] =>  0:25
+CLOCK: [2022-03-21 周一 15:46]--[2022-03-21 周一 16:11] =>  0:25
+CLOCK: [2022-03-21 周一 15:11]--[2022-03-21 周一 15:36] =>  0:25
+CLOCK: [2022-03-21 周一 14:40]--[2022-03-21 周一 15:06] =>  0:26
+CLOCK: [2022-03-21 周一 13:50]--[2022-03-21 周一 14:15] =>  0:25
+CLOCK: [2022-03-21 周一 13:20]--[2022-03-21 周一 13:45] =>  0:25
 CLOCK: [2022-03-18 周五 16:58]--[2022-03-18 周五 17:23] =>  0:25
 CLOCK: [2022-03-18 周五 15:53]--[2022-03-18 周五 16:18] =>  0:25
 CLOCK: [2022-03-18 周五 15:23]--[2022-03-18 周五 15:48] =>  0:25
