--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -36,7 +36,8 @@ DEADLINE: <2022-04-12 周二 23:00 +1m> SCHEDULED: <2022-04-12 周二 09:00 +1m>
 | [2022-03-25] | tunic       |     -90 |
 | [2022-03-25] | cup         |    -569 |
 | [2022-03-26] | takeout     |   -24.5 |
-|              |             | -2978.6 |
+| [2022-03-27] | takeout     |    -100 |
+|              |             | -3078.6 |
 #+TBLFM: @>$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
 house rent: 2000, game: 445,  takeout: 284, fee: 218, shopping: 1373, commute: 37
@@ -833,7 +834,7 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** TODO [#A] 减肥 [2/3]                                             :event:
+** TODO [#A] 减肥 [3/3]                                             :event:
 SCHEDULED: <2022-03-21 周一 17:27 +1w>
 :PROPERTIES:
 :LAST_REPEAT: [2022-03-21 周一 00:36]
@@ -847,7 +848,7 @@ SCHEDULED: <2022-03-21 周一 17:27 +1w>
 目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
 - [X] 跑步一次 5.0km
 - [X] 跑步一次 5.0km
-- [ ] 跑步一次 2.5km
+- [X] 跑步一次 5.0km
 ** DONE [#A] 续租合同                                               :event:
 CLOSED: [2022-03-21 周一 00:36] DEADLINE: <2022-03-20 周日 18:00> SCHEDULED: <2022-03-20 周日 09:00>
 * Appointment
